--- a/portlets/so-portlet/benchmarks/build.xml
+++ b/portlets/so-portlet/benchmarks/build.xml
@@ -26,11 +26,12 @@
 
 	<target name="build-sample-sql" depends="compile">
 		<property name="sample.sql.properties.file" value="${basedir}/so-benchmarks.properties" />
+		<property name="sql.dir" value="../docroot/WEB-INF/sql" />
 
 		<copy file="${sample.sql.properties.file}" tofile="temp.properties" overwrite="true" />
 
 		<concat destfile="temp.properties" append="true">
-sql.dir=${sdk.dir}/portlets/so-portlet/docroot/WEB-INF/sql
+			sql.dir=${sql.dir}
 		</concat>
 
 		<java
